--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /prjExemploAssociacaoBinaria/nbproject/private/
 /prjExemploAssociacaoBinaria/build/
 /prjAssocBinPessoaFisicaJuridica/nbproject/private/
+/prjAtiv4/nbproject/private/
+/prjAtiv4/build/
