Modificações no gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /prjExemploAssociacaoBinaria/nbproject/private/
 /prjExemploAssociacaoBinaria/build/
 /prjAssocBinPessoaFisicaJuridica/nbproject/private/
+/prjAssocBinPessoaFisicaJuridica/build/
+/prjExemploArrayListThis/nbproject/private/
+.gitignore
