--- a/prjCirculoMetodoConstrutor/nbproject/private/private.properties
+++ b/prjCirculoMetodoConstrutor/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\0030482321026\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/shenmue/.netbeans/8.2/build.properties
