refactor: Revisto pequenos detalhes de exercicios anteriores.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /prjExemplo_OO_GUI_BD/build/
 /prjExemplo_OO_GUI_BD/dist/
 /prjExemplo_OO_GUI_BD/nbproject/private/
+/prjExemploGuiRetangulo/build/
