--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /prjExemplo_OO_GUI_BD/dist/
 /prjExemplo_OO_GUI_BD/nbproject/private/
 /prjExemploGuiRetangulo/build/
+/prjPOOAdrianoPasquale/nbproject/private/
