--- a/prjEmpresa/nbproject/project.properties
+++ b/prjEmpresa/nbproject/project.properties
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=fatec.poo.view.GuiProjeto
+main.class=fatec.poo.view.GuiEmpresa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
