--- a/prjPOOAdrianoPasquale/nbproject/project.properties
+++ b/prjPOOAdrianoPasquale/nbproject/project.properties
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=prjpooadrianopasquale.PrjPOOAdrianoPasquale
+main.class=fatec.poo.view.GuiHotel
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
