--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /prjExemplo_OO_GUI_BD/nbproject/private/
 /prjExemploGuiRetangulo/build/
 /prjPOOAdrianoPasquale/nbproject/private/
+/prjPOOAdrianoPasquale/build/
